Modernize to Paper API 26.1